# inventory-manager

./: CHANGELOG.md  README.md
inventoryManager/: CMakeLists.txt  Main.qml  databasemanager.cpp  databasemanager.h  enums.h  main.cpp
inventoryManager/database/sql/: 00_full_schema.sql  seed_01_weapons.sql  seed_02_armor.sql  seed_03_gear.sql  seed_04_tools.sql  seed_05_magic.sql
